added client using swagger
